	  src/org/jcae/mesh/amibe/ds/Mesh.java
	  src/org/jcae/mesh/amibe/algos3d/AbstractAlgoHalfEdge.java: Use Java
	1.5 ability to override return types.
	* src/org/jcae/mesh/xmldata/XMLHelper.java (parseXMLString): Throws
	ParserConfigurationException, SAXException, IOException.
	* src/org/jcae/mesh/xmldata/MeshReader.java (readObject, readObject3D):
	Throws IOException.

Thu Oct 25 15:51:57 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/traits/TraitsBuilder.java: Create a Traits
	instance only if it is needed.

Wed Oct 24 00:38:57 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AdjacencyWrapper.java: File removed,
	adjacency relations can be managed without this interface.

Mon Oct 22 10:20:49 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AdjacencyWrapper.java: Rename setFlag(),
	clearFlag() and hasFlag() methods into setAttributes(),
	clearAttributes() and hasAttributes().
	* src/org/jcae/mesh/amibe/ds/Triangle.java: Remove isBoundary(),
	isOuter(), isMarked() and friends methods, and add setAttributes(),
	clearAttributes() and hasAttributes() to have the same methods for
	edges and triangles.
	* src/org/jcae/mesh/amibe/ds/AdjacencyWrapper.java
	  src/org/jcae/mesh/amibe/ds/TriangleVH.java: Move getEdgeAttributes()
	and setEdgeAttributes() from AdjacencyWrapper into TriangleVH.
	* src/org/jcae/mesh/amibe/ds/Triangle.java: Remove adj member.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/TriangleVH.java:  HalfEdge and TriangleVH
	implement AdjacencyWrapper.
	* src/org/jcae/mesh/amibe/ds/AdjacencyWrapper.java: getAdj() and
	setAdj() can work on AdjacencyWrapper instances.

Sun Oct 21 20:41:07 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/traits/MeshTraitsBuilder.java: Always add
	TRIANGLES attribute, we can do nothing if this attribute is unset.