@@ -524,6 +524,14 @@ public class DecimateHalfEdge extends AbstractAlgoHalfEdge
 		}
 		new DecimateHalfEdge(mesh, options).compute();
 		final File brepFile=new File(args[3]);
-		MeshWriter.writeObject3D(mesh, args[4], "jcae3d", brepFile.getParent(), brepFile.getName());
+		try
+		{
+			MeshWriter.writeObject3D(mesh, args[4], "jcae3d", brepFile.getParent(), brepFile.getName());
+		}
+		catch (IOException ex)
+		{
+			ex.printStackTrace();
+			throw new RuntimeException(ex);
+		}
 	}
 }
