@@ -285,6 +285,14 @@ public class SmoothNodes3D
 		opts.put("size", args[2]);
 		opts.put("iterations", args[3]);
 		new SmoothNodes3D(mesh, opts).compute();			
-		MeshWriter.writeObject3D(mesh, args[0], args[1], args[4], args[5]);
+		try
+		{
+			MeshWriter.writeObject3D(mesh, args[0], args[1], args[4], args[5]);
+		}
+		catch (IOException ex)
+		{
+			ex.printStackTrace();
+			throw new RuntimeException(ex);
+		}
 	}
 }
