@@ -226,6 +226,14 @@ public class SplitEdge extends AbstractAlgoHalfEdge
 		}
 		new SplitEdge(mesh, options).compute();
 		File brepFile=new File(args[3]);
-		MeshWriter.writeObject3D(mesh, args[4], "jcae3d", brepFile.getParent(), brepFile.getName());
+		try
+		{
+			MeshWriter.writeObject3D(mesh, args[4], "jcae3d", brepFile.getParent(), brepFile.getName());
+		}
+		catch (IOException ex)
+		{
+			ex.printStackTrace();
+			throw new RuntimeException(ex);
+		}
 	}
 }
