@@ -18,6 +18,11 @@ Tue Oct 30 13:58:05 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 	ParserConfigurationException, SAXException, IOException.
 	* src/org/jcae/mesh/xmldata/MeshReader.java (readObject, readObject3D):
 	Throws IOException.
+	* src/org/jcae/mesh/xmldata/XMLHelper.java (parseXML): Do not throw
+	TransformerConfigurationException and TransformerException, but
+	transform these exceptions into IOException.
+	* src/org/jcae/mesh/xmldata/MeshWriter.java (writeObject, writeObject3D):
+	Throws IOException.
 
 Thu Oct 25 15:51:57 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 
